--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ Author: Carolina Ruz
 Version: 1.0
 */
 
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; 
+
+
 body{
  color: purple
 }
